# TektraSense-KiPipe

./: ABOUTME.md  KiCad_BOM_CSV.numbers  LICENSE  README.md  pyproject.toml
Scripts/: fetch_parts.py
Scripts/utils/: api_clients.py  db_manager.py
scripts/: --- Your Internal Categories ---.md  api_clients.py  config.py  data_processor.py  db_manager.py  fetch_parts.py  main.py  map_helper.py  supplier_apis.py  test_digikey.py
scripts/commands/: add_footprint.py  add_symbol.py  fetch.py  import_symbols.py  link_footprint.py  map_categories.py  scan_missing.py
scripts/database/: create_tables.sql
scripts/tests/: KiCad_BOM.xlsx  mouser_test.py
src/examples/: KiCad_BOM_CSV.csv
src/tektrasense_kipipe/: config.py  supplier_apis.py
src/tektrasense_kipipe/commands/: add_footprint.py  scan_missing.py
tests/: test_config.py  test_data_processor.py  test_db_manager.py  test_supplier_apis.py
tests/commands/: test_add_footprint.py  test_add_symbol.py  test_fetch.py  test_import_symbols.py  test_link_footprint.py
